compiler/testData/cli/jvm/noReflect.out
compiler/testData/cli/jvm/noReflect.kt:4:19: error: unresolved reference 'primaryConstructor' on receiver of type 'KClass<String>'.
    String::class.primaryConstructor
                  ^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
